odd letter spacing specific to mozilla firefox bugfix?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,6 @@ h1{
 li{
     font-style: bold;
     font-size: 1.8rem;
-    letter-spacing: .75vw;
 }
 .answer{
     width: 95%;
